@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.filmstarts" name="Filmstarts" version="1.0.1" provider-name="L0RE">
+<addon id="plugin.video.filmstarts" name="Filmstarts" version="1.0.2" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="plugin.video.youtube" version="6.1.0"/>
@@ -25,12 +25,10 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 1.0.1  (30.12.2018)[/COLOR][/B][CR]by realvito[CR]
-- fixed: Addon komplett umgeschrieben und sämtliche Bugs beseitigt :-)
-- added: Mehr Informationen in vielen Rubriken abrufbar (sofern vorhanden) - Datum, Genre, Regie, Bewertung ...
-- added: Rubriken = Vorpremieren im Kino, Neue und kommende Staffeln im deutschen Fernsehen
-- optimized: Exceptions eingebaut - damit ein Fehler nicht gleich das Addon lahmlegt
-- removed: Rubrik = Kinderfilme im Kino (kein Inhalt)
+		<news>[B][COLOR orangered]Version 1.0.2  (21.01.2019)[/COLOR][/B] by realvito[CR]
+- fixed: Hauptrubrik Trailer = sämtliche Unterordner ohne Inhalt
+- fixed: Unterordner Trailer = Anzeige der nächsten Seite
+- optimized: In der Rubrik = Kino/Starttermin nach Wochen - Aktuelle Woche farblich hervorgehoben
 		</news>
 	</extension>
 </addon>
